external-crates/move/crates/move-compiler/tests/move_check/parser/missing_angle_brace_close.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/parser/missing_angle_brace_close.move:1:8
  │
1 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/missing_angle_brace_close.move:3:22
  │
3 │         let x = t<u64;
  │                  -   ^ Expected '>'
  │                  │    
  │                  To match this '<'
  │                  Perhaps you need a blank space before this '<' operator?

